# kakisute

./: Cargo.toml  LICENCE  README.md
.github/workflows/: prepare_release.yml  release.yml  test.yml
src/: app.rs  data_dir.rs  datetime_helper.rs  domain.rs  editor.rs  kakisute_file.rs  kakisute_list.rs  lib.rs  main.rs  operation.rs  repository.rs  service.rs  ui.rs
src/app/: delete_service.rs  edit_service.rs  inspect_service.rs  list_service.rs  new_service.rs  show_service.rs  ui.rs
src/domain/: kakisute.rs
src/kakisute_list/: selector.rs  single_query.rs
src/service/: interface.rs  kakisute_file.rs  kakisute_list.rs
src/service/kakisute_list/: kakisute_file.rs  selector.rs
src/services/: edit_service.rs  list_service.rs  new_service.rs
src/ui/: app_interactor.rs  components.rs  display_data.rs  filtered_list.rs  index.rs  input_handler.rs  list_index.rs  renderer.rs  terminal_manager.rs  tui_app.rs
src/ui/components/: filtered_list.rs  list_index.rs  text_input.rs
