[package]
name = "kakisute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
scrawl = "1.1.0"
directories = "4.0.1"
chrono = "0.4"

[dev-dependencies]
speculate = "0.1"
