[package]
name = "kakisute"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
clap_complete = "3.2.5"
scrawl = "1.1.0"
directories = "4.0.1"
chrono = "0.4"
shellexpand = "2.1"
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1.5"
anyhow = "1.0"
thiserror = "1.0"
grep = "0.2.12"
termcolor = "1.0.4"
walkdir = "2.2.7"

[dev-dependencies]
speculate = "0.1"
